# Editions_metadata

./: .gitignore  CI_CD_README.md  README.md  RELEASE_GUIDE.md  TROUBLESHOOTING.md  metadata_example.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml  release.yml  test.yml
metadata-generator/: ASSETS_GUIDE.md  Cargo.toml  DISTRIBUTION_GUIDE.md  END_USER_TROUBLESHOOTING.md  GITHUB_DISTRIBUTION.md  INSTALLATION_GUIDE.md  INSTALLER_GUIDE.md  PROFESSIONAL_INSTALLER.md  README.md  SIMPLE_INSTALLER_GUIDE.md  TROUBLESHOOTING.md  Test Artwork_metadata.json  VERIFICATION_GUIDE.md  metadata.json
metadata-generator/scripts/: build-app.sh  bundle-ffmpeg.sh  convert-icon.sh  create-dmg-installer.sh  create-release.sh  create-simple-installer.sh  create-static-bundle.sh  create-universal-installer.sh  diagnose-app.sh  install-ffmpeg-deps.sh  quick-fix.sh  test-app.sh
metadata-generator/src/: blake3_hash.rs  constants.rs  file_analyzer.rs  hasher.rs  main.rs  metadata_generator.rs
scripts/: build.bat  build.sh  release.sh
