[package]
name = "MetadataGenerator"
version = "0.1.1"
authors = ["Andrew Robinson <robinson.andrewjames@gmail.com>"]
license = "MIT"
description = "A tool to create metadata for digital artwork editions"
readme = "README.md"
edition = "2021"
keywords = ["cli", "metadata", "generator"]
categories = ["command-line-utilities"]

[dependencies]
blake3 = {version = "1.5.3", features = ["mmap", "rayon"]}
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.5"
indicatif = {version = "0.15"}
log = "0.4"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
memmap = "0.7"
eframe = "0.27"
rfd = "0.14"
image = "0.24"
anyhow = "1.0"

[features]
default = ["gui"]
cli = []
gui = []

[[bin]]
name = "MetadataGenerator"
path = "src/bin/gui.rs"
required-features = ["gui"]

[[bin]]
name = "cli"
path = "src/main.rs"
required-features = ["cli"]
